# langextract-docling

./: .gitignore  LICENSE  README.md  autoformat.sh  pyproject.toml  test_plugin.py
langextract_docling/: __init__.py  markdown_chunker.py  provider.py
tests/: conftest.py  test_import_redirection.py  test_pdf_functionality.py
tests/langextract/: annotation_test.py  chunking_test.py  data_lib_test.py  extract_precedence_test.py  extract_schema_integration_test.py  factory_schema_test.py  factory_test.py  inference_test.py  init_test.py  progress_test.py  prompt_validation_test.py  prompting_test.py  provider_plugin_test.py  provider_schema_test.py  registry_test.py  resolver_test.py  schema_test.py  test_kwargs_passthrough.py  test_live_api.py  test_ollama_integration.py  tokenizer_test.py  visualization_test.py
