[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-docling"
version = "0.1.0"
description = "Docling based wrapper for LangExtract"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "docling>=2.53.0",
    "langextract>=1.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["langextract_docling*"]
